--- a/worksheets/worksheet_07.ipynb
+++ b/worksheets/worksheet_07.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Worksheet 07\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Yuanyuan Wang\n",
+    "UID: U26234904\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.326320013253751, 5.141294243646965, 4.8018199571564955, 5.293795243018996, 5.306637742428527, 4.707778647500695, 5.209742271540497, 3.7353702380870484, 5.876773529640368, 5.084208667216384]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -49,11 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.949667056012537, 8.968662737528597, 7.770260170299656, 8.049897227585596, 6.01517330161005, 7.711751398665243, 8.840306653567517, 6.873278345963023, 7.274541548096861, 6.510801096326982]\n"
+     ]
+    }
+   ],
    "source": [
-    "c2 = np.random.normal( ... , ... , ... ).tolist()\n",
+    "mean1 = 8\n",
+    "stdev1 = 1\n",
+    "c2 = np.random.normal(mean1 , stdev1 , 10).tolist()\n",
     "print(c2)"
    ]
   },
@@ -66,19 +84,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.510801096326982, 5.084208667216384, 5.876773529640368, 7.274541548096861, 3.7353702380870484, 5.209742271540497, 4.707778647500695, 5.306637742428527, 5.293795243018996, 6.873278345963023]\n"
+     ]
+    }
+   ],
    "source": [
     "data = []\n",
     "for i in range(10):\n",
     "    # flip coin\n",
     "    coin_output = random.choice([0, 1])\n",
     "    if coin_output == 0:\n",
-    "        p1 = ...\n",
+    "        p1 = c1.pop()\n",
     "        data.append(p1)\n",
     "    else:\n",
-    "        p2 = ...\n",
+    "        p2 = c2.pop()\n",
     "        data.append(p2)\n",
     "print(data)"
    ]
@@ -110,20 +136,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.084208667216384, 3.7353702380870484, 5.209742271540497, 4.707778647500695, 5.306637742428527, 5.293795243018996]\n",
+      "[6.510801096326982, 5.876773529640368, 7.274541548096861, 6.873278345963023]\n",
+      "P(C_1) = 0.6,  P(C_2) = 0.4\n",
+      "mean_1 = 4.8895888016320255,  mean_2 = 6.633848630006808\n",
+      "var_1 = 0.30716053787163317,  var_2 = 0.2640293518282912\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wangyuanyuan/opt/anaconda3/envs/cs542/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "kmeans = KMeans(2, init='k-means++').fit(X=np.array(data).reshape(-1, 1))\n",
     "\n",
     "c1 = [x[0] for x in filter(lambda x: x[1] == 0, zip(data, kmeans.labels_))]\n",
     "print(c1)\n",
-    "c2 = ...\n",
+    "c2 = [x[0] for x in filter(lambda x: x[1] == 1, zip(data, kmeans.labels_))]\n",
     "print(c2)\n",
     "\n",
-    "prob_c = [ len(c1) / (len(c1) + len(c2)) , ... ]\n",
-    "mean = [ sum(c1)/len(c1) , ... ]\n",
-    "var = [ sum(map(lambda x : (x - mean[0])**2, c1)) / len(c1) , ... ]\n",
+    "prob_c = [ len(c1) / (len(c1) + len(c2)) , len(c2) / (len(c1) + len(c2)) ]\n",
+    "mean = [ sum(c1)/len(c1) , sum(c2)/len(c2) ]\n",
+    "var = [ sum(map(lambda x : (x - mean[0])**2, c1)) / len(c1) , sum(map(lambda x : (x - mean[1])**2, c2)) / len(c2) ]\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -133,7 +179,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The mean for c1 is 5 and stdev for c1 is 1. The mean for c2 is 8 and stdev for c2 is 1."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,9 +192,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point =  6.510801096326982\n",
+      "probability of observing that point if it came from cluster 0 =  1.159499795340993e-06\n",
+      "probability of observing that point if it came from cluster 1 =  1.3554873696065204\n",
+      "point =  5.084208667216384\n",
+      "probability of observing that point if it came from cluster 0 =  1.0625967191905694\n",
+      "probability of observing that point if it came from cluster 1 =  5.0013483348347743e-08\n",
+      "point =  5.876773529640368\n",
+      "probability of observing that point if it came from cluster 0 =  0.007423194181896028\n",
+      "probability of observing that point if it came from cluster 1 =  0.02476792050674197\n",
+      "point =  7.274541548096861\n",
+      "probability of observing that point if it came from cluster 0 =  1.052535713395418e-13\n",
+      "probability of observing that point if it came from cluster 1 =  0.07954512454130702\n",
+      "point =  3.7353702380870484\n",
+      "probability of observing that point if it came from cluster 0 =  0.0011151953484808564\n",
+      "probability of observing that point if it came from cluster 1 =  1.0234883498508462e-26\n",
+      "point =  5.209742271540497\n",
+      "probability of observing that point if it came from cluster 0 =  0.754463351720372\n",
+      "probability of observing that point if it came from cluster 1 =  7.276300686910437e-07\n",
+      "point =  4.707778647500695\n",
+      "probability of observing that point if it came from cluster 0 =  1.0901004798766192\n",
+      "probability of observing that point if it came from cluster 1 =  4.203561029542556e-12\n",
+      "point =  5.306637742428527\n",
+      "probability of observing that point if it came from cluster 0 =  0.5166942736779018\n",
+      "probability of observing that point if it came from cluster 1 =  4.924061362951822e-06\n",
+      "point =  5.293795243018996\n",
+      "probability of observing that point if it came from cluster 0 =  0.5463968695506581\n",
+      "probability of observing that point if it came from cluster 1 =  3.851440484348962e-06\n",
+      "point =  6.873278345963023\n",
+      "probability of observing that point if it came from cluster 0 =  1.1397925447616923e-09\n",
+      "probability of observing that point if it came from cluster 1 =  1.0015874745827793\n",
+      "6.510801096326982\n",
+      "Probability of coming from C_1 = 1.2831159480721324e-06\n",
+      "Probability of coming from C_2 = 0.9999987168840521\n",
+      "\n",
+      "5.084208667216384\n",
+      "Probability of coming from C_1 = 0.9999999686218481\n",
+      "Probability of coming from C_2 = 3.137815182735537e-08\n",
+      "\n",
+      "5.876773529640368\n",
+      "Probability of coming from C_1 = 0.3101378898954143\n",
+      "Probability of coming from C_2 = 0.6898621101045858\n",
+      "\n",
+      "7.274541548096861\n",
+      "Probability of coming from C_1 = 1.9847898651162915e-12\n",
+      "Probability of coming from C_2 = 0.9999999999980153\n",
+      "\n",
+      "3.7353702380870484\n",
+      "Probability of coming from C_1 = 1.0\n",
+      "Probability of coming from C_2 = 6.1184398544767036e-24\n",
+      "\n",
+      "5.209742271540497\n",
+      "Probability of coming from C_1 = 0.9999993570444483\n",
+      "Probability of coming from C_2 = 6.429555517380376e-07\n",
+      "\n",
+      "4.707778647500695\n",
+      "Probability of coming from C_1 = 0.9999999999974293\n",
+      "Probability of coming from C_2 = 2.5707483589081754e-12\n",
+      "\n",
+      "5.306637742428527\n",
+      "Probability of coming from C_1 = 0.9999936467522736\n",
+      "Probability of coming from C_2 = 6.35324772632016e-06\n",
+      "\n",
+      "5.293795243018996\n",
+      "Probability of coming from C_1 = 0.9999953008242417\n",
+      "Probability of coming from C_2 = 4.699175758358582e-06\n",
+      "\n",
+      "6.873278345963023\n",
+      "Probability of coming from C_1 = 1.706979028403208e-09\n",
+      "Probability of coming from C_2 = 0.999999998293021\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import norm\n",
     "\n",
@@ -171,8 +296,8 @@
     "    prob_x = prob_c[0] * pdf_i[0] + prob_c[1] * pdf_i[1]\n",
     "\n",
     "    # P(C_j | X_i) = P(X_i | C_j)P(C_j) / P(X_i)\n",
-    "    prob_c0_x.append( ... )\n",
-    "    prob_c1_x.append( ... )\n",
+    "    prob_c0_x.append( pdf_i[0] * prob_c[0] /  prob_x)\n",
+    "    prob_c1_x.append( pdf_i[1] * prob_c[1] /  prob_x )\n",
     "\n",
     "probs = zip(data, prob_c0_x, prob_c1_x)\n",
     "for p in probs:\n",
@@ -191,13 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(C_1) = 0.6310127447960567,  P(C_2) = 0.3689872552039433\n",
+      "mean_1 = 4.938107744172796,  mean_2 = 6.697477423351363\n",
+      "var_1 = 0.3376080612538115,  var_2 = 3.3293843355241677\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), ... ]\n",
-    "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), ... ]\n",
-    "var = [ ... , ... ]\n",
+    "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), sum(prob_c1_x) / len(prob_c1_x) ]\n",
+    "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), sum([x[0] * x[1] for x in zip(prob_c1_x, data)]) / sum(prob_c1_x) ]\n",
+    "var = [ sum([prob_c0_x[i] * (data[i] - mean[0])**2 for i in range(len(data))]) / sum(prob_c0_x) , sum([prob_c1_x[i] * (data[i] - mean[0])**2 for i in range(len(data))]) / sum(prob_c1_x) ]\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -207,7 +342,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "These values are not very different to each other and the variances are much more closer."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,15 +355,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.510801096326982\n",
+      "Probability of coming from C_1 = 0.0003276372294729917\n",
+      "Probability of coming from C_2 = 0.999672362770527\n",
+      "\n",
+      "5.084208667216384\n",
+      "Probability of coming from C_1 = 0.9452659341141126\n",
+      "Probability of coming from C_2 = 0.05473406588588728\n",
+      "\n",
+      "5.876773529640368\n",
+      "Probability of coming from C_1 = 0.2670684750776249\n",
+      "Probability of coming from C_2 = 0.7329315249223752\n",
+      "\n",
+      "7.274541548096861\n",
+      "Probability of coming from C_1 = 6.814683340414045e-10\n",
+      "Probability of coming from C_2 = 0.9999999993185317\n",
+      "\n",
+      "3.7353702380870484\n",
+      "Probability of coming from C_1 = 0.04209562567710054\n",
+      "Probability of coming from C_2 = 0.9579043743228994\n",
+      "\n",
+      "5.209742271540497\n",
+      "Probability of coming from C_1 = 0.9309503135558403\n",
+      "Probability of coming from C_2 = 0.06904968644415956\n",
+      "\n",
+      "4.707778647500695\n",
+      "Probability of coming from C_1 = 0.9410923310948419\n",
+      "Probability of coming from C_2 = 0.058907668905158146\n",
+      "\n",
+      "5.306637742428527\n",
+      "Probability of coming from C_1 = 0.910250018796049\n",
+      "Probability of coming from C_2 = 0.08974998120395099\n",
+      "\n",
+      "5.293795243018996\n",
+      "Probability of coming from C_1 = 0.9136556654385\n",
+      "Probability of coming from C_2 = 0.08634433456150008\n",
+      "\n",
+      "6.873278345963023\n",
+      "Probability of coming from C_1 = 1.2388606189157527e-06\n",
+      "Probability of coming from C_2 = 0.9999987611393811\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_c0_x = []\n",
+    "prob_c1_x = []\n",
+    "\n",
+    "for p in data:\n",
+    "    pdf_i = [norm.pdf(p, mean[j], var[j]) for j in range(k)]\n",
+    "    prob_x = prob_c[0] * pdf_i[0] + prob_c[1] * pdf_i[1]\n",
+    "\n",
+    "    prob_c0_x.append(pdf_i[0] * prob_c[0] / prob_x)\n",
+    "    prob_c1_x.append(pdf_i[1] * prob_c[1] / prob_x)\n",
+    "\n",
+    "probs = zip(data, prob_c0_x, prob_c1_x)\n",
+    "for p in probs:\n",
+    "    print(p[0])\n",
+    "    print(\"Probability of coming from C_1 = \" + str(p[1]))\n",
+    "    print(\"Probability of coming from C_2 = \" + str(p[2]))\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There seem to be a lot more definitive decisions being made(probability of 1) which wasn't really happening with the kmeans implementation."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,10 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 1, 0, 0, 0, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = []\n",
+    "\n",
+    "for i in range(len(data)):\n",
+    "    if prob_c0_x[i] > prob_c1_x[i]:\n",
+    "        labels.append(0)\n",
+    "    else:\n",
+    "        labels.append(1)\n",
+    "\n",
+    "print(labels)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,11 +564,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('env': venv)",
+   "display_name": "Python 3.10.9 ('cs542')",
    "language": "python",
    "name": "python3"
   },
@@ -361,9 +579,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "14c444db5a0e8352dac8d0b98541726cd84ef8959480aedf2945f20ba17e9cae"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
