Add all updates so far to branch lab04

--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: BaichengFang \n",
+    "\n",
+    "UID: U74172090\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +26,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Testability and falsifiable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +40,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Both postive and negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +54,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(100, 102, 104)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +72,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- (2, 4, 6)    **Positive**\n",
+    "- (6, 8 , 10)  **Negative**\n",
+    "- (1, 3, 5)    **Negative**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +88,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(1, 2, 3), the only negative example"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,10 +102,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. process data\n",
+    "\n",
+    "2. explore data\n",
+    "\n",
+    "3. extract features\n",
+    "\n",
+    "4. create model"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,10 +127,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- record: Histrotical prices of merchandises\n",
+    "- graph: Line graph of temparature trend of a city\n",
+    "- image: VGG-Face, ImageNet\n",
+    "- text: Collection of many e-mails"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,10 +144,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Recommend movies to various user groups."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,12 +158,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Labeled image classification."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,9 +179,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
