--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Baicheng Fang \n",
+    "\n",
+    "UID: U741720290\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -17,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,10 +28,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. start wutg a random cneter\n",
+    "2. let D(x) be the distance between x and the centers selected so far, choose the next center with probability proportinoal to $D(x)_a$\n",
+    "\n",
+    "when\n",
+    "- a=0: random intialization\n",
+    "- a=∞: FFT\n",
+    "- a=2: K-means++"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,10 +48,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Can not handle some curve or spiral shape of clusters."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,10 +83,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "k=2 or 3.\n",
+    "\n",
+    "When k=2, the cohesion of the blue points is higher than that of the green ones. Although silhouette of the green cluster is slightly lower, the two clusters look well separated.\n",
+    "\n",
+    "WHen k=3, we see that the blue cluster in figure 1 remains intact, while the other one splits into two smaller ones. These two clusters have lower silhouette values than the ones obtained by the blue cluster, but all three appear to be well defined."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,7 +116,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,7 +123,7 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
+    "| A | 0 |$\\sqrt{2}$|3   |1   |$\\sqrt{8}$   |\n",
     "| B |   | 0 |   |   |   |\n",
     "| C |   |   | 0 |   |   |\n",
     "| D |   |   |   | 0 |   |\n",
@@ -225,15 +236,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
