--- a/worksheets/worksheet_08.ipynb
+++ b/worksheets/worksheet_08.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -385,7 +384,7 @@
    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -399,9 +398,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
