--- a/worksheets/worksheet_11.ipynb
+++ b/worksheets/worksheet_11.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 11\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Youheng Yang\\\n",
+    "UID: U45006780\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -56,9 +56,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "    No"
+   ]
   },
   {
    "attachments": {},
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1.\n",
+      "[1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 1. 1. 1.]\n"
      ]
     }
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -126,14 +129,28 @@
     }
    ],
    "source": [
-    "def gini(node):\n",
+    "def gini(dataset, target_name):\n",
+    "    data = dataset[target_name]\n",
+    "    #length = len(data)\n",
+    "    s = data.sum()\n",
     "    frequencies = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        # (length - s) / length,\n",
+    "        # s / length\n",
+    "        np.mean(data),\n",
+    "        1 - np.mean(data)\n",
     "    ]\n",
     "    return 1 - sum([f**2 for f in frequencies])\n",
     "\n",
-    "print(\"GINI of the node is \", gini(data[\"heart_disease\"]))"
+    "print(\"GINI of the node is \", gini(data, \"heart_disease\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GINI of split on thalassemia =  0.13265306122448983\n",
+    "GINI of split on chest_pain =  0.5625"
    ]
   },
   {
@@ -146,26 +163,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of split on thalassemia =  0.13265306122448983\n",
-      "GINI of split on chest_pain =  0.5625\n"
+      "GINI of split on thalassemia =  0.23469387755102047\n",
+      "GINI of split on chest_pain =  0.4419642857142857\n"
      ]
     }
    ],
    "source": [
     "def gini_split(data, attr, target_name):\n",
+    "    num = len(data[attr])\n",
     "    ginis = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        len(data[data[attr]==0]) * gini(data[data[attr]==0], target_name) / num,\n",
+    "        len(data[data[attr]==1]) * gini(data[data[attr]==1], target_name) / num\n",
     "    ]\n",
     "\n",
-    "    return ...\n",
+    "    return sum(ginis)\n",
     "\n",
     "print(\"GINI of split on thalassemia = \", gini_split(data, \"thalassemia\", \"heart_disease\"))\n",
     "print(\"GINI of split on chest_pain = \", gini_split(data, \"chest_pain\", \"heart_disease\"))"
@@ -265,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +300,13 @@
    "source": [
     "def predict(tree : Node, example):\n",
     "    if tree.left is None and tree.right is None:\n",
-    "        ...\n",
+    "        return tree.vote\n",
     "    \n",
     "    if example[tree.attr] == 0:\n",
-    "        ...\n",
+    "        return predict(tree.left, example)\n",
     "\n",
     "    if example[tree.attr] == 1:\n",
-    "        ...\n",
+    "        return predict(tree.right, example)\n",
     "\n",
     "    return 0\n",
     "\n",
@@ -308,16 +326,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_best_attribute(data, target_name):\n",
-    "    best_attr = None\n",
+    "    best_attr = {\n",
+    "        'attr': None,\n",
+    "        'gini': 1\n",
+    "    }\n",
+    "    \n",
     "    for attr in data.dtype.names:\n",
     "        if attr != target_name:\n",
-    "            ...\n",
-    "    return best_attr"
+    "            gini_attr = gini_split(data, attr, target_name)\n",
+    "            if gini_attr <= best_attr['gini']:\n",
+    "                best_attr['attr'] = attr\n",
+    "                best_attr['gini'] = gini_attr\n",
+    "    return best_attr['attr']"
    ]
   },
   {
@@ -330,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -348,6 +373,16 @@
       "| chest_pain = 1: \n",
       "| | vote = 1\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/numpy/core/fromnumeric.py:3464: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/numpy/core/_methods.py:192: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     }
    ],
@@ -373,15 +408,34 @@
     "\n",
     "\n",
     "    def gini_split(self, data, attr):\n",
-    "        ...\n",
+    "        num = len(data[attr])\n",
+    "        ginis = [\n",
+    "            len(data[data[attr]==0]) * gini(data[data[attr]==0], self.target_name) / num,\n",
+    "            len(data[data[attr]==1]) * gini(data[data[attr]==1], self.target_name) / num\n",
+    "        ]\n",
+    "\n",
+    "        return sum(ginis)\n",
     "\n",
     "\n",
     "    def get_majority_vote(self, data):\n",
-    "        ...\n",
+    "        if np.mean(data[self.target_name]) > .5:\n",
+    "            return 1\n",
+    "        return 0\n",
     "\n",
     "\n",
     "    def get_best_attribute(self, data):        \n",
-    "        ...\n",
+    "        best_attr = {\n",
+    "        'attr': None,\n",
+    "        'gini': 1\n",
+    "    }\n",
+    "    \n",
+    "        for attr in data.dtype.names:\n",
+    "            if attr != self.target_name:\n",
+    "                gini_attr = gini_split(data, attr, self.target_name)\n",
+    "                if gini_attr <= best_attr['gini']:\n",
+    "                    best_attr['attr'] = attr\n",
+    "                    best_attr['gini'] = gini_attr\n",
+    "        return best_attr['attr']\n",
     "\n",
     "\n",
     "    def build_tree(self, data, depth):        \n",
@@ -436,12 +490,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
