--- a/worksheets/worksheet_11.ipynb
+++ b/worksheets/worksheet_11.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 11\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Tianyi Bao\n",
+    "UID: U89641075\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {
       "image/jpeg": {
        "height": 300,
@@ -56,9 +56,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would predict NO. "
+   ]
   },
   {
    "attachments": {},
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1.\n",
+      "[1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 1. 1. 1.]\n"
      ]
     }
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +131,8 @@
    "source": [
     "def gini(node):\n",
     "    frequencies = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        np.mean(node),\n",
+    "        1 - np.mean(node)\n",
     "    ]\n",
     "    return 1 - sum([f**2 for f in frequencies])\n",
     "\n",
@@ -146,26 +149,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of split on thalassemia =  0.13265306122448983\n",
-      "GINI of split on chest_pain =  0.5625\n"
+      "GINI of split on thalassemia =  0.4693877551020409\n",
+      "GINI of split on chest_pain =  0.8671875\n"
      ]
     }
    ],
    "source": [
     "def gini_split(data, attr, target_name):\n",
     "    ginis = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        gini(data[target_name][data[attr] == 0]),\n",
+    "        gini(data[target_name][data[attr] == 1]),\n",
     "    ]\n",
     "\n",
-    "    return ...\n",
+    "    return sum(ginis)\n",
     "\n",
     "print(\"GINI of split on thalassemia = \", gini_split(data, \"thalassemia\", \"heart_disease\"))\n",
     "print(\"GINI of split on chest_pain = \", gini_split(data, \"chest_pain\", \"heart_disease\"))"
@@ -181,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +285,13 @@
    "source": [
     "def predict(tree : Node, example):\n",
     "    if tree.left is None and tree.right is None:\n",
-    "        ...\n",
+    "        return tree.vote\n",
     "    \n",
     "    if example[tree.attr] == 0:\n",
-    "        ...\n",
+    "        return predict(tree.left, example)\n",
     "\n",
     "    if example[tree.attr] == 1:\n",
-    "        ...\n",
+    "        return predict(tree.right, example)\n",
     "\n",
     "    return 0\n",
     "\n",
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +319,10 @@
     "    best_attr = None\n",
     "    for attr in data.dtype.names:\n",
     "        if attr != target_name:\n",
-    "            ...\n",
+    "            if best_attr is None:\n",
+    "                best_attr = attr\n",
+    "            elif gini_split(data, attr, target_name) < gini_split(data, best_attr, target_name):\n",
+    "                best_attr = attr\n",
     "    return best_attr"
    ]
   },
@@ -330,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -373,15 +379,29 @@
     "\n",
     "\n",
     "    def gini_split(self, data, attr):\n",
-    "        ...\n",
+    "        ginis = [\n",
+    "            gini(data[self.target_name][data[attr] == 0]),\n",
+    "            gini(data[self.target_name][data[attr] == 1]),\n",
+    "        ]\n",
+    "\n",
+    "        return sum(ginis)\n",
     "\n",
     "\n",
     "    def get_majority_vote(self, data):\n",
-    "        ...\n",
+    "        if np.mean(data[self.target_name])>.5:\n",
+    "            return 1\n",
+    "        return 0\n",
     "\n",
     "\n",
     "    def get_best_attribute(self, data):        \n",
-    "        ...\n",
+    "        best_attr = None\n",
+    "        for attr in data.dtype.names:\n",
+    "            if attr != self.target_name:\n",
+    "                if best_attr is None:\n",
+    "                    best_attr = attr\n",
+    "                elif self.gini_split(data, attr) < self.gini_split(data, best_attr):\n",
+    "                    best_attr = attr\n",
+    "        return best_attr\n",
     "\n",
     "\n",
     "    def build_tree(self, data, depth):        \n",
@@ -436,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
